fixed navbar spacing

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -35,3 +35,6 @@
 #custom-bootstrap-menu.navbar-default .navbar-toggle:focus .icon-bar {
     background-color: #f8f8f8;
 }
+body {
+    padding-top: 65px;
+}
